# kdesudo

./: .reviewboardrc  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Messages.sh  README
cmake/: Finddocbook.cmake
doc/: CMakeLists.txt  makelink.cmake
doc/man/: CMakeLists.txt  kdesudo.1  kdesudo.1.docbook
kdesudo/: CMakeLists.txt  config.h.cmake  kcookie.cpp  kcookie.h  kdesudo.cpp  kdesudo.h  main.cpp
po/: CMakeLists.txt
po/ar/: CMakeLists.txt
po/ar/messages/: kdesudo.po
po/ast/: CMakeLists.txt
po/ast/messages/: kdesudo.po
po/be/: CMakeLists.txt
po/be/messages/: kdesudo.po
po/bg/: CMakeLists.txt
po/bg/messages/: kdesudo.po
po/bs/: CMakeLists.txt
po/bs/messages/: kdesudo.po
po/ca/: CMakeLists.txt
po/ca/messages/: kdesudo.po
po/cs/: CMakeLists.txt
po/cs/messages/: kdesudo.po
po/da/: CMakeLists.txt
po/da/messages/: kdesudo.po
po/de/: CMakeLists.txt
po/de/messages/: kdesudo.po
po/el/: CMakeLists.txt
po/el/messages/: kdesudo.po
po/en_AU/: CMakeLists.txt
po/en_AU/messages/: kdesudo.po
po/en_CA/: CMakeLists.txt
po/en_CA/messages/: kdesudo.po
po/en_GB/: CMakeLists.txt
po/en_GB/messages/: kdesudo.po
po/eo/: CMakeLists.txt
po/eo/messages/: kdesudo.po
po/es/: CMakeLists.txt
po/es/messages/: kdesudo.po
po/et/: CMakeLists.txt
po/et/messages/: kdesudo.po
po/fa/: CMakeLists.txt
po/fa/messages/: kdesudo.po
po/fi/: CMakeLists.txt
po/fi/messages/: kdesudo.po
po/fr/: CMakeLists.txt
po/fr/messages/: kdesudo.po
po/ga/: CMakeLists.txt
po/ga/messages/: kdesudo.po
po/gl/: CMakeLists.txt
po/gl/messages/: kdesudo.po
po/he/: CMakeLists.txt
po/he/messages/: kdesudo.po
po/hr/: CMakeLists.txt
po/hr/messages/: kdesudo.po
po/hu/: CMakeLists.txt
po/hu/messages/: kdesudo.po
po/id/: CMakeLists.txt
po/id/messages/: kdesudo.po
po/is/: CMakeLists.txt
po/is/messages/: kdesudo.po
po/it/: CMakeLists.txt
po/it/messages/: kdesudo.po
po/ja/: CMakeLists.txt
po/ja/messages/: kdesudo.po
po/jv/: CMakeLists.txt
po/jv/messages/: kdesudo.po
po/kk/: CMakeLists.txt
po/kk/messages/: kdesudo.po
po/km/: CMakeLists.txt
po/km/messages/: kdesudo.po
po/ko/: CMakeLists.txt
po/ko/messages/: kdesudo.po
po/lt/: CMakeLists.txt
po/lt/messages/: kdesudo.po
po/lv/: CMakeLists.txt
po/lv/messages/: kdesudo.po
po/ms/: CMakeLists.txt
po/ms/messages/: kdesudo.po
po/nb/: CMakeLists.txt
po/nb/messages/: kdesudo.po
po/nl/: CMakeLists.txt
po/nl/messages/: kdesudo.po
po/oc/: CMakeLists.txt
po/oc/messages/: kdesudo.po
po/pl/: CMakeLists.txt
po/pl/messages/: kdesudo.po
po/ps/: CMakeLists.txt
po/ps/messages/: kdesudo.po
po/pt/: CMakeLists.txt
po/pt/messages/: kdesudo.po
po/pt_BR/: CMakeLists.txt
po/pt_BR/messages/: kdesudo.po
po/ro/: CMakeLists.txt
po/ro/messages/: kdesudo.po
po/ru/: CMakeLists.txt
po/ru/messages/: kdesudo.po
po/sk/: CMakeLists.txt
po/sk/messages/: kdesudo.po
po/sl/: CMakeLists.txt
po/sl/messages/: kdesudo.po
po/sq/: CMakeLists.txt
po/sq/messages/: kdesudo.po
po/sr/: CMakeLists.txt
po/sr/messages/: kdesudo.po
po/sv/: CMakeLists.txt
po/sv/messages/: kdesudo.po
po/te/: CMakeLists.txt
po/te/messages/: kdesudo.po
po/tl/: CMakeLists.txt
po/tl/messages/: kdesudo.po
po/tr/: CMakeLists.txt
po/tr/messages/: kdesudo.po
po/ug/: CMakeLists.txt
po/ug/messages/: kdesudo.po
po/uk/: CMakeLists.txt
po/uk/messages/: kdesudo.po
po/zh_CN/: CMakeLists.txt
po/zh_CN/messages/: kdesudo.po
po/zh_TW/: CMakeLists.txt
po/zh_TW/messages/: kdesudo.po
